# ChangeLog file for MonetDB
# This file is updated with Maddlog
